// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ProposalPageFollowers /> should render a proposal page follower with more 32 users 1`] = `
<div>
  <div
    className="box-header"
  >
    <h3
      className="box-title mb-20"
    >
      <FormattedMessage
        id="proposal.follower.count"
        values={
          Object {
            "num": 3,
          }
        }
      />
       
    </h3>
  </div>
  <Row
    bsClass="row"
    componentClass="div"
  >
    <ForwardRef(Relay(UserBox))
      className="proposal__follower"
      key="0"
      user={
        Object {
          "$fragmentRefs": null,
          "id": "userAdmin",
        }
      }
    />
    <ForwardRef(Relay(UserBox))
      className="proposal__follower"
      key="1"
      user={
        Object {
          "$fragmentRefs": null,
          "id": "user137",
        }
      }
    />
    <ForwardRef(Relay(UserBox))
      className="proposal__follower"
      key="2"
      user={
        Object {
          "$fragmentRefs": null,
          "id": "user70",
        }
      }
    />
  </Row>
  <div
    className="text-center"
  >
    <button
      className="text-center btn btn-secondary"
      disabled={false}
      onClick={[Function]}
      type="button"
    >
      <FormattedMessage
        id="see-more-followers"
        values={Object {}}
      />
    </button>
  </div>
</div>
`;

exports[`<ProposalPageFollowers /> should render a proposal page follower with users 1`] = `
<div>
  <div
    className="box-header"
  >
    <h3
      className="box-title mb-20"
    >
      <FormattedMessage
        id="proposal.follower.count"
        values={
          Object {
            "num": 3,
          }
        }
      />
       
    </h3>
  </div>
  <Row
    bsClass="row"
    componentClass="div"
  >
    <ForwardRef(Relay(UserBox))
      className="proposal__follower"
      key="0"
      user={
        Object {
          "$fragmentRefs": null,
          "id": "userAdmin",
        }
      }
    />
    <ForwardRef(Relay(UserBox))
      className="proposal__follower"
      key="1"
      user={
        Object {
          "$fragmentRefs": null,
          "id": "user137",
        }
      }
    />
    <ForwardRef(Relay(UserBox))
      className="proposal__follower"
      key="2"
      user={
        Object {
          "$fragmentRefs": null,
          "id": "user70",
        }
      }
    />
  </Row>
</div>
`;

exports[`<ProposalPageFollowers /> should render a proposal page follower without users 1`] = `
<div>
  <div
    className="box-header"
  >
    <h3
      className="box-title mb-20"
    >
      <FormattedMessage
        id="proposal.follower.count"
        values={
          Object {
            "num": 0,
          }
        }
      />
       
    </h3>
  </div>
  <div
    className="well well-lg text-center"
  >
    <i
      className="cap-32 cap-contacts-1 "
    />
    <br />
    <FormattedMessage
      id="no-followers"
      values={Object {}}
    />
  </div>
</div>
`;
